@@ -120,3 +120,5 @@ REL1_10_7:
 - Added 'EmailLog' extension
 - Added 'UserSettingsChanged' hook in User.php (used for logging functionality)
 - Adjusted 'Log/emaillog' browse right for '*' group
+- Added 'ReCaptcha' plug-in -- requires customization to the target site where BizzWiki is deployed.
+- 
